Fix required spacing between edge of header and items

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -21,14 +21,14 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
+  padding: 8px;
 }
 
 .header-navigation,
 .header-notification {
   display: flex;
   align-items: center;
-  gap: 20px;
+  gap: 16px;
 }
 
 .profile-image {
@@ -63,5 +63,5 @@ a {
 ul {
   list-style-type: none;
   display: flex;
-  gap: 15px;
+  gap: 16px;
 }
